--- a/package.json
+++ b/package.json
@@ -4,18 +4,18 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.0.5",
-    "@nomiclabs/hardhat-waffle": "^2.0.2",
-    "chai": "^4.3.6",
-    "ethereum-waffle": "^3.4.0",
-    "ethers": "^5.5.4",
-    "hardhat": "^2.8.4",
+    "@nomiclabs/hardhat-ethers": "^2.2.3",
+    "@nomiclabs/hardhat-waffle": "^2.0.6",
+    "chai": "^5.2.1",
+    "ethereum-waffle": "^4.0.10",
+    "hardhat": "^2.26.1",
     "mocha": "^9.2.1"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.5.0",
     "axios": "^0.26.0",
     "chalk": "2.4.1",
-    "dotenv": "^16.0.0"
+    "dotenv": "^17.2.1",
+    "ethers": "^5.7.2"
   }
 }
